--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hotel Dream Stay by Delish Hospitality.com</title>
+    <title>Hotel Dream Stay by Delish Hospitality</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -29,7 +29,7 @@
     <header class="site-header js-site-header">
       <div class="container-fluid">
         <div class="row align-items-center">
-          <div class="col-6 col-lg-4 site-logo" data-aos="fade"><a href="index.html">Dream Stay</a></div>
+          <div class="col-6 col-lg-4 site-logo" data-aos="fade"><a href="index.html">Hotel Dream Stay</a></div>
           <div class="col-6 col-lg-8">
 
 
