--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="site-header js-site-header">
       <div class="container-fluid">
         <div class="row align-items-center">
-          <div class="col-6 col-lg-4 site-logo" data-aos="fade"><a href="index.html">Hotel Dream Stay</a></div>
+          <div class="col-6 col-lg-4 site-logo" data-aos="fade"><a style="font-size: 18px;" href="index.html">Hotel Dream Stay</a></div>
           <div class="col-6 col-lg-8">
 
 
